# lightdrift-libraw

./: .gitignore  BUFFER_API_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  PUBLICATION.md  README.md  README_CONVERT.md  UPGRADE.md  binding.gyp  package-lock.json  package.json  pnpm-lock.yaml
docs/: API.md  BUFFER_API.md  CROSS_COMPILATION.md  EXAMPLES.md  FORMATS.md  TESTING.md
examples/: README.md  advanced-demo.js  advanced-features.js  api-comparison-example.js  basic-example.js  batch-example.js  complete-example.js  fast-performance-test.js  jpeg-conversion-example.js  parallel-batch-test.js  quality-test.js  simple-buffer-example.js  speed-test.js  stream-buffer-example.js
lib/: index.d.ts  index.js
libraw-node-poc/: README.md  binding.gyp  package.json
libraw-node-poc/examples/: basic-example.js
libraw-node-poc/lib/: index.js
libraw-node-poc/src/: libraw_wrapper.h
libraw-node-poc/test/: compare-samples.js  quick-test.js  test-samples.js  test.js
sample-images/: .gitkeep
sample-images/thumbnails/: README.md  index.html
scripts/: batch-jpeg-conversion.js  build-libraw-cmake.js  build-libraw.js  build-unified.sh  cross-compile.js  extract-thumbnails.js  fix-try-catch.js  generate-docs.js  github-setup.js  remove-catch.js  remove-try-catch.js  upgrade-libraw.js
src/: addon.cpp  libraw_wrapper.cpp  libraw_wrapper.h  libraw_wrapper_new.cpp
test/: BUFFER_API_SUMMARY.md  README.md  all-formats.test.js  buffer-creation.test.js  buffer-demo.js  buffer-edge-cases.test.js  buffer-integration.test.js  buffer-operations.test.js  compare-samples.js  comprehensive.test.js  config.js  configuration.test.js  convert-arw.js  convert-raw-to-jpg.js  convert-rw2.js  error-handling.test.js  file-utils.js  final-buffer-test.js  format-conversion.test.js  image-processing.test.js  index.js  jpeg-conversion.test.js  multi-size-jpeg.test.js  performance.test.js  quick-buffer-test.js  quick-buffer-verification.js  quick-multi-size-demo.js  quick-test.js  run-buffer-tests.js  static-methods.test.js  test-raw-samples-safe.js  test-raw-samples.js  test-real-raw.js  test-rebuild-fixed.js  test-samples.js  test.js  thumbnail-extraction.test.js
types/: index.d.ts
